# 2026_camera_lidar_calibration

./: .gitignore
src/front_lidar_camera_fusion/: CMakeLists.txt  README.md  package.xml
src/front_lidar_camera_fusion/config/: front_pipeline.yaml  roof_cam_1_checkerboard.yaml
src/front_lidar_camera_fusion/launch/: camera_checkerboard_calibration.launch  front_pipeline.launch  lidar_camera_extrinsic_tuner.launch
src/front_lidar_camera_fusion/scripts/: camera_checkerboard_calibrator.py  extrinsic_override.py  lidar_colorize_node.py  lidar_global_transform_node.py
