<?xml version="1.0"?>
<package format="2">
  <name>front_lidar_camera_fusion</name>
  <version>0.1.0</version>
  <description>Front lidar and front camera fusion pipeline for colored and global point clouds.</description>

  <maintainer email="treeze@example.com">treeze</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export/>
</package>
